[gd_scene load_steps=6 format=2]

[ext_resource path="res://assets/Kenney Future Narrow.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://assets/Theme.tres" type="Theme" id=2]
[ext_resource path="res://ui/AddressDialog.gd" type="Script" id=3]

[sub_resource type="DynamicFont" id=1]
size = 50
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[node name="AddressDialog" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="AddressDialog" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Background" type="ColorRect" parent="AddressDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.313726 )

[node name="HBoxContainer" type="HBoxContainer" parent="AddressDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="Control2" type="Control" parent="AddressDialog/HBoxContainer"]
margin_right = 225.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4

[node name="VBoxContainer" type="VBoxContainer" parent="AddressDialog/HBoxContainer"]
margin_left = 229.0
margin_right = 794.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Control3" type="Control" parent="AddressDialog/HBoxContainer/VBoxContainer"]
margin_right = 565.0
margin_bottom = 148.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="PanelContainer" type="PanelContainer" parent="AddressDialog/HBoxContainer/VBoxContainer"]
margin_top = 152.0
margin_right = 565.0
margin_bottom = 448.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="AddressDialog/HBoxContainer/VBoxContainer/PanelContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 545.0
margin_bottom = 276.0

[node name="Label" type="Label" parent="AddressDialog/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 49.0
margin_right = 525.0
margin_bottom = 76.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "Enter the Server Address"
align = 1

[node name="AddressInput" type="Control" parent="AddressDialog/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer"]
margin_top = 130.0
margin_right = 525.0
margin_bottom = 256.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="LineEdit" type="LineEdit" parent="AddressDialog/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/AddressInput"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="LineHint" type="LineEdit" parent="AddressDialog/HBoxContainer/VBoxContainer/PanelContainer/VBoxContainer/AddressInput"]
self_modulate = Color( 1, 1, 1, 0.498039 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
size_flags_horizontal = 3
size_flags_vertical = 3
custom_fonts/font = SubResource( 1 )
custom_styles/read_only = SubResource( 2 )
text = "192.168.100.000"
align = 1
editable = false
caret_blink = true
caret_blink_speed = 0.5

[node name="Control4" type="Control" parent="AddressDialog/HBoxContainer/VBoxContainer"]
margin_top = 452.0
margin_right = 565.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.5

[node name="Control" type="Control" parent="AddressDialog/HBoxContainer"]
margin_left = 798.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.4
